--- a/Rest.ipynb
+++ b/Rest.ipynb
@@ -35,28 +35,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x57890e0>"
+       "<sqlite3.Cursor at 0x55e2ce0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create table\n",
-    "c.execute('''CREATE TABLE user\\\n",
-    "             (id INTEGER PRIMARY KEY AUTOINCREMENT, \\\n",
-    "              name TEXT  NOT NULL,\\\n",
-    "              password TEXT  NOT NULL, \\\n",
-    "              modified TEXT  NOT NULL, \\\n",
-    "              created TEXT  NOT NULL)''')"
+    "c.execute('''CREATE TABLE assign_brand_to_merchant(\\\n",
+    "   assign_id INTEGER PRIMARY KEY AUTOINCREMENT,\\\n",
+    "   brand_id         INT    NOT NULL,\\\n",
+    "   merchant_id         INT    NOT NULL,\\\n",
+    "   FOREIGN KEY (brand_id) REFERENCES brand(brand_id),\\\n",
+    "   FOREIGN KEY (merchant_id) REFERENCES merchant(merchant_id)\\\n",
+    ");''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'datta', None, None, 'datta@gmail.com', '12345', None)\n",
+      "(2, 'martins', None, None, 'martins@gmail.com', '12345', None)\n",
+      "(3, 'popayes', None, None, 'popayes@gmail.com', '12345', None)\n",
+      "(4, 'borkar', None, None, 'borkar@gmail.com', '12345', None)\n",
+      "(5, 'sawant', None, None, 'sawant@gmail.com', '12345', None)\n",
+      "(6, 'vincent', None, None, 'vincent@gmail.com', '12345', None)\n",
+      "(7, 'kadar', None, None, 'kadar@gmail.com', '12345', None)\n",
+      "(8, 'oddel', None, None, 'oddel@gmail.com', '12345', None)\n",
+      "(9, 'rama', None, None, 'rama@gmail.com', '12345', None)\n",
+      "(10, 'ulhas', None, None, 'ulhas@gmail.com', '12345', None)\n",
+      "(11, 'gopal', None, None, 'gopal@gmail.com', '12345', None)\n",
+      "(12, 'dessi', None, None, 'dessi@gmail.com', '12345', None)\n",
+      "(13, 'dhoni', None, None, 'dhoni@gmail.com', '12345', None)\n",
+      "(14, 'ambani', None, None, 'ambani@gmail.com', '12345', None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "c.execute('SELECT * FROM merchant')\n",
+    "for row in c.fetchall():\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Kadar Super Store', 10)\n",
+      "(2, 'Borkar Super Store', 10)\n",
+      "(3, 'Oddel Super Store', 10)\n",
+      "(4, 'Popayes Fast Food', 4)\n",
+      "(5, 'Martins Corner', 4)\n",
+      "(6, 'Ullhas Food', 4)\n",
+      "(7, 'Gopal Food', 4)\n",
+      "(8, 'Rama Food', 4)\n",
+      "(9, 'Dessi Cuppa', 4)\n",
+      "(10, 'Jio Mobile Store', 5)\n",
+      "(11, 'Dhoni Motors', 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "c.execute('SELECT * FROM brand')\n",
+    "for row in c.fetchall():\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "c.execute(\"INSERT INTO assign_brand_to_merchant (brand_id,merchant_id) VALUES (1,7)\");\n",
+    "c.execute(\"INSERT INTO assign_brand_to_merchant (brand_id,merchant_id) VALUES (2,4)\");\n",
+    "c.execute(\"INSERT INTO assign_brand_to_merchant (brand_id,merchant_id) VALUES (3,8)\");\n",
+    "c.execute(\"INSERT INTO assign_brand_to_merchant (brand_id,merchant_id) VALUES (4,3)\");\n",
+    "c.execute(\"INSERT INTO assign_brand_to_merchant (brand_id,merchant_id) VALUES (5,2)\");\n",
+    "c.execute(\"INSERT INTO assign_brand_to_merchant (brand_id,merchant_id) VALUES (6,10)\");\n",
+    "c.execute(\"INSERT INTO assign_brand_to_merchant (brand_id,merchant_id) VALUES (7,11)\");\n",
+    "c.execute(\"INSERT INTO assign_brand_to_merchant (brand_id,merchant_id) VALUES (8,9)\");\n",
+    "c.execute(\"INSERT INTO assign_brand_to_merchant (brand_id,merchant_id) VALUES (9,12)\");\n",
+    "c.execute(\"INSERT INTO assign_brand_to_merchant (brand_id,merchant_id) VALUES (10,14)\");\n",
+    "c.execute(\"INSERT INTO assign_brand_to_merchant (brand_id,merchant_id) VALUES (11,13)\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "c.execute(\"INSERT INTO brand_category (brand_category_name) VALUES ('Super Store')\");\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x55e2ce0>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create table\n",
+    "c.execute(\"select name from sqlite_master where type = 'table'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('sqlite_sequence',), ('authtoken',), ('user',), ('merchant',)]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x55e2ce0>"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.execute(\"DELETE FROM brand_category WHERE brand_category_id = 3\")"
    ]
   },
   {
@@ -74,26 +241,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, 'pramit', '12345', '2006-01-05', '2006-01-05'), (2, 'sawant', '12345', '2006-01-05', '2006-01-05')]\n"
+      "[(1, 'datta', None, None, 'datta@gmail.com', '12345', None), (2, 'martins', None, None, 'martins@gmail.com', '12345', None), (3, 'popayes', None, None, 'popayes@gmail.com', '12345', None), (4, 'borkar', None, None, 'borkar@gmail.com', '12345', None), (5, 'sawant', None, None, 'sawant@gmail.com', '12345', None), (6, 'vincent', None, None, 'vincent@gmail.com', '12345', None), (7, 'kadar', None, None, 'kadar@gmail.com', '12345', None), (8, 'oddel', None, None, 'oddel@gmail.com', '12345', None), (9, 'rama', None, None, 'rama@gmail.com', '12345', None), (10, 'ulhas', None, None, 'ulhas@gmail.com', '12345', None), (11, 'gopal', None, None, 'gopal@gmail.com', '12345', None), (12, 'dessi', None, None, 'dessi@gmail.com', '12345', None), (13, 'dhoni', None, None, 'dhoni@gmail.com', '12345', None), (14, 'ambani', None, None, 'ambani@gmail.com', '12345', None)]\n"
      ]
     }
    ],
    "source": [
-    "c.execute('SELECT * FROM user')\n",
+    "c.execute('SELECT * FROM merchant')\n",
     "print(c.fetchall())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -169,7 +340,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -189,7 +362,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -219,7 +394,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "OperationalError",
@@ -241,7 +418,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -269,7 +448,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -289,7 +470,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "username = 'pramit'\n",
@@ -303,7 +486,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -323,7 +508,9 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from collections import defaultdict"
@@ -332,7 +519,9 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = defaultdict(list)"
@@ -341,7 +530,9 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -371,7 +562,9 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -406,7 +599,9 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def parse(data,tag):\n",
@@ -419,7 +614,9 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -439,7 +636,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -457,14 +656,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -483,7 +686,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     " h['SE']\n",
@@ -509,7 +714,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -530,7 +737,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "q = [A,B,C]"
@@ -539,7 +748,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -556,35 +767,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -605,7 +826,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7rc1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
